--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -52,7 +52,7 @@ a {
   border-bottom: 2px solid transparent;
   -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  color: #272727;
+  color: #ef525a;
   font-weight: 400;
   text-decoration: none;
 }
@@ -61,7 +61,7 @@ a:hover {
   position: static;
   left: -2px;
   top: 2px;
-  border-bottom: 2px solid #272727;
+  border-bottom: 2px solid rgba(239, 82, 90, 0.81);
 }
 
 ul {
@@ -75,7 +75,7 @@ li {
 }
 
 strong {
-  font-weight: bold;
+  font-weight: 400;
 }
 
 em {
@@ -85,6 +85,7 @@ em {
 }
 
 .body {
+  height: 100%;
   background-color: #f0f0f0;
   -webkit-transition: opacity 200ms linear;
   transition: opacity 200ms linear;
@@ -156,6 +157,7 @@ em {
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
+  font-size: 14px;
 }
 
 .home_section-1--contain {
@@ -179,6 +181,7 @@ em {
 
 .global_site--contain {
   min-height: 100%;
+  margin-top: 0px;
 }
 
 .home_s1--block {
@@ -671,7 +674,7 @@ em {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 40px;
+  margin-top: 0px;
   margin-bottom: 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1252,8 +1255,8 @@ em {
 .about-text {
   position: static;
   display: block;
-  padding-top: 24px;
-  padding-bottom: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1298,7 +1301,7 @@ em {
 }
 
 .divider {
-  width: 150px;
+  width: 100px;
   margin: auto;
 }
 
@@ -1647,6 +1650,8 @@ em {
 .product-thumb--contain {
   position: relative;
   border: 0px none #000;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
 }
 
 .product-thumb {
@@ -1697,7 +1702,6 @@ em {
   border-style: none;
   border-width: 3px 3px 2px;
   border-color: #ef525a;
-  background-color: #fff;
   -webkit-filter: saturate(0%);
   filter: saturate(0%);
   color: #000;
@@ -1728,7 +1732,7 @@ em {
   top: 0%;
   right: auto;
   bottom: auto;
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   float: left;
@@ -1774,6 +1778,66 @@ em {
   align-content: stretch;
 }
 
+.pricing-contain {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 700px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.pricing-section {
+  padding: 20px 40px;
+  background-color: #fff;
+}
+
+.pricing-list {
+  color: #000;
+  font-weight: 300;
+}
+
+.pricing-item {
+  font-size: 1em;
+  line-height: 1.3em;
+}
+
+.text-block {
+  text-align: center;
+}
+
+.pricing-text {
+  margin-bottom: 20px;
+  color: #ef525a;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  text-align: center;
+}
+
+.section-title {
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+.link-3 {
+  border-bottom-style: solid;
+  border-bottom-color: #272727;
+}
+
 @media (max-width: 991px) {
   .main-navbar {
     position: absolute;
@@ -1816,6 +1880,9 @@ em {
     margin-top: 0px;
     padding-top: 60px;
     padding-bottom: 100px;
+  }
+  .global_site--contain {
+    margin-top: 20px;
   }
   .navbar-mobile-menu {
     position: absolute;
@@ -2343,6 +2410,10 @@ em {
   .zoom {
     width: 40px;
   }
+  .pricing-contain {
+    margin-top: 20px;
+    padding-top: 0px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2589,6 +2660,9 @@ em {
     -ms-flex-preferred-size: 45%;
     flex-basis: 45%;
   }
+  .pricing-contain {
+    padding: 0px 40px;
+  }
 }
 
 @media (max-width: 479px) {
@@ -2719,6 +2793,9 @@ em {
   }
   .zoom {
     width: 50px;
+  }
+  .pricing-contain {
+    padding: 10px;
   }
 }
 
